Fix Font Version Alignment

--- a/Assets/css/font-switcher.css
+++ b/Assets/css/font-switcher.css
@@ -140,8 +140,9 @@ a.font-page-link:hover, a.font-page-link:focus {
     background: var(--pp-white);
     padding-inline: 5px;
     color: var(--pp-grey);
-    margin-top: 2px;
+    margin: -4px;
     text-align: center;
+    line-height: 1;
 }
 
 .font-form fieldset span.font-typeface {
